# haushaltsplan-fuer-die-rwth-loewen-wg

./: Cargo.toml  README.md  index.html  style.css
src/: main.rs  main.rs-e
static/: example.json
