[package]
name = "Haushaltsplan0_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["blocking", "json"] ***REMOVED***
serde_json = "1.0.91"
#gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] ***REMOVED***
wasm-bindgen-futures = "0.4"
yew = { version = "0.20", features = ["csr"] ***REMOVED***
yew-router = "0.17.0"
futures = "0.3.25"
gloo-net = "0.2.5"
pin-utils = "0.1.0"
log = "0.4.17"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
